--- a/Styles/css/style.css
+++ b/Styles/css/style.css
@@ -1,6 +1,6 @@
 
 body {
-    margin: 0px;
+    margin: 0;
     font-family: "Arial", sans-serif;
 }
 
@@ -20,9 +20,7 @@ body {
 /* header */
 
 .page-header {
-    background-image: url(../img/header-bg.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
+    background: url(../img/header-bg.jpg) no-repeat center;
     background-size: cover;
 }
 
@@ -53,10 +51,7 @@ body {
     margin-top: 5px;
     border-radius: 6px;
     border: 2px white solid;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding: 10px 30px;
     margin-left: 100px;
 }
 
@@ -70,8 +65,7 @@ body {
     width: 600px;
     display: block;
     color: white;
-    margin: 0 auto;
-    margin-top: 100px;
+    margin: 100px auto 0;
     padding-bottom: 150px;
 }
 
@@ -154,10 +148,7 @@ body {
     text-decoration: none;
     border-radius: 4px;
     border: 2px #a38b70 solid;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding: 10px 30px;
     margin-left: 500px;
 }
 
@@ -176,7 +167,7 @@ dt a, dt a:hover {
 }
 
 dd {
-    margin: 0px;
+    margin: 0;
     position: relative;
     padding-left: 130px;
     font-size: 18px;
@@ -184,8 +175,8 @@ dd {
 
 dd img {
     border-radius: 5px;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
     position: absolute;
 }
 
@@ -217,7 +208,7 @@ dd img {
 
 .popular-and-price{
     margin-top: 50px;
-    padding-top: 50px;
+    padding-top: 10px;
     background-color: #F1F1F1;
 }
 
@@ -232,11 +223,10 @@ dd img {
 
 .popular-items {
     padding-top: 50px;
-    padding-bottom: 60px;
 }
 
 .popular-and-price .wrapper .catalog-item .btn {
-    margin-left: 0px;
+    margin-left: 0;
 }
 
 .popular-items h3 {
@@ -271,5 +261,58 @@ dd img {
     margin-left: 30px;
     margin-right: 30px;
 }
+
+/* price-table */
+
+.price-list {
+    margin-top: 30px;
+    width: 100%;
+    border-collapse: collapse;
+    line-height: 30px;
+    display: table;
+    border-spacing: 2px;
+    border-color: grey;
+}
+
+td {
+    border: 1px solid #d8d8d8;
+}
+
+th {
+    text-align: left;
+    font-family: "Arial", sans-serif;
+    color: #404040;
+    font-weight: normal;
+    font-size: 14px;
+    text-transform: uppercase;
+}
+
+td, th {
+    padding: 10px 17px;
+}
+
+.price-list .price-name {
+    width: 422px;
+    font-weight: bold;
+    color: #000000;
+}
+
+.price-list .price-number {
+    width: 15px;
+}
+
+.price-list .price-master {
+    width: 306px;
+}
+
+.price-list .price-cost {
+    width: 135px;
+}
+
+.popular-and-price .wrapper {
+    padding: 70px;
+}
+
+
 
 
