--- a/Styles/css/style.css
+++ b/Styles/css/style.css
@@ -143,7 +143,7 @@ body {
     margin-bottom: 5px;
 }
 
-.cat-reference .wrapper .btn, .reviews .wrapper .btn, .popular-and-price .wrapper .btn {
+.cat-reference .wrapper .btn, .reviews .wrapper .btn, .popular-and-price .wrapper .btn, .footer-top .btn {
     color: #a38b70;
     text-decoration: none;
     border-radius: 4px;
@@ -398,7 +398,130 @@ textarea {
 
 .page-footer {
     background-color: #393939;
+    color: white;
 }
+
+.page-footer a {
+    color: white;
+}
+
+.footer-top {
+
+    border-bottom: 1px solid #5e5e5e;
+}
+
+.footer-top .footer-logo {
+    margin-top: 40px;
+    display: inline-block;
+}
+
+.footer-top .btn {
+    position: relative;
+    top: -20px;
+    left: 140px;
+    display: inline-block;
+    border-color: white;
+    color: white;
+}
+
+.footer-middle {
+    padding-bottom: 30px;
+    border-bottom: 1px solid #5e5e5e;
+}
+
+.footer-menu {
+    margin-right: 90px;
+    vertical-align:top;
+    display: inline-block;
+}
+
+.footer-menu h3 {
+    font-weight: bold;
+    font-size: 24px;
+    font-family: "Georgia", serif;
+    color: #a38b70;
+}
+
+.footer-menu ul {
+    padding-left: 0;
+}
+
+.footer-menu li {
+    margin-bottom: 15px;
+    list-style-type: none;
+    marker: none;
+}
+
+.footer-menu a {
+    color: #c3c3c3;
+    text-decoration: none;
+}
+
+.footer-bottom {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.footer-social {
+    display: inline-block;
+}
+
+.footer-social b {
+    margin-right: 40px;
+    font-size: 24px;
+    font-family: "Georgia", serif;
+    color: #a38b70;
+}
+
+.social-btn {
+    font-size: 0;
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    margin-right: 10px;
+    vertical-align: middle;
+    color: #ffffff;
+    background-image: url(../img/sprite.png);
+    background-repeat: no-repeat;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.social-btn:hover {
+    border: 1px solid rgba(255, 255, 255, 0.8);
+}
+
+.vk {
+    background-position: 16px -238px;
+}
+
+.fb {
+    background-position: 19px -297px;
+}
+
+.in {
+    background-position: 13px -358px;
+}
+
+.footer-copyright {
+    margin-left: 300px;
+    display: inline-block;
+}
+
+.footer-copyright a {
+    text-decoration: none;
+}
+
+.footer-copyright .heart {
+    display: inline-block;
+    background: url(../img/sprite.png) no-repeat;
+    background-position: -5px -419px;
+    width: 27px;
+    height: 24px;
+    font-size: 0;
+    vertical-align: middle;
+}
+
+
 
 
 
