--- a/EXALLENGE/css/style.css
+++ b/EXALLENGE/css/style.css
@@ -637,8 +637,8 @@ body {
 
 .page-footer {
   background-color: #f2f2f2;
-  padding-top: 45px;
-  padding-bottom: 50px;
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
 
 .footer-top {
@@ -677,8 +677,7 @@ body {
   margin-bottom: 20px;
   font-weight: bold;
   font-size: 24px;
-  font-family: "Georgia", serif;
-  color: #a38b70;
+  color: #707070;
 }
 
 .footer-menu ul {
@@ -692,12 +691,13 @@ body {
 }
 
 .footer-menu a {
-  color: #c3c3c3;
+  font-size: 14px;
+  color: #707070;
   text-decoration: none;
 }
 
 .footer-menu a:hover {
-  color: #ffffff;
+  color: #303030;
 }
 
 .footer-menu a:active {
