--- a/EXALLENGE/css/style.css
+++ b/EXALLENGE/css/style.css
@@ -165,6 +165,16 @@ body {
   margin: 0;
 }
 
+@media (max-width: 599px) { 
+  .feature-item {
+    width: 80%;
+    margin: 0 auto;
+    border: none;
+    float: none;
+    display: block;
+  }
+}
+
 .wrapper {
   width: 800px;
   margin: 0 auto;
